--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
 
 <body>
 
-	<img src=".\images\24_Pentagramm_v1.svg" alt="Vierundzwanzig24" title="this is a logo" width="200" height="200">
+	<img src=".\images\24_logo.svg" alt="Vierundzwanzig24" title="this is a logo" width="200" height="200">
 	<h1 title="the best website on the planet">Vierundzwanzig24.de</h1>
 	<p>under construction</p>
 	<p contenteditable="true">This is a paragraph. It is editable. Try to change this text.</p>
